files/examples/ok/syntax_if_elif_el.t
def main(): 
int a, b
bool c,d
<*
Its if close has an error. Fix them to test next one
*>
    if a <= b: 
        puti(a)
    elif not c:
        puti(b)
    elif d = true:
        putb(c)
    elif 'a' = 'c':
        putb(c)
    else :
        putc('a')
    end 

end