files/examples/error/syntax_if_elif_el.t
def main(): 
int a, b
bool c,d

    if a <= b: 
        puti(a)
    elif not c:
        puti(b)
    elif a = d
        putb(c)
    else 
        putc('a' )
    end 

end